--- a/client/views/partials/admin/customers/commissionAgents.html
+++ b/client/views/partials/admin/customers/commissionAgents.html
@@ -3,10 +3,17 @@
         <li class="pull-left name-head">Commission Agents
         </li>
         <li class="pull-right col-xs-2">
-            <select class="form-control">
-                <option>Select</option>
-                <option>Enabled</option>
+            <select class="form-control" ng-model="status1" ng-change="initCommissionAgent(status1);">
+                <option value="" selected>Search by Status</option>
+                <option ng-value="true">Enabled</option>
+                <option ng-value="false">Disabled</option>
             </select>
+        </li>
+        <li class="col-xs-3 pull-right">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search" ng-model="commissionAgent1">
+                <span class="input-group-addon" ng-click="searchByCommissionAgent(commissionAgent1);"><i class="glyphicon glyphicon-search"></i></span>
+            </div>
         </li>
         <div class="clearfix"></div>
     </ul>
