--- a/client/views/partials/admin/customers/customers.html
+++ b/client/views/partials/admin/customers/customers.html
@@ -3,17 +3,10 @@
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.customersLead">Customer Leads</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.truckOwners">Truck Owners</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.transporters">Transporters</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="customers.commissionAgent">Commission Agent</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="customers.commissionAgents">Commission Agent</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.factoryOwners">Factory Owners</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="customers.guest">Guest</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="customers.guests">Guest</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="customers.restOfAll">Rest of All</a></li>
-        <li class="col-sm-3 col-xs-12 pull-right">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            </div>
-        </li>
-
     </ul>
     <ui-view></ui-view>
 </div>
