--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
     <link rel="stylesheet" href="components/angular-ui-select/dist/select.min.css">
+    <link rel="stylesheet" href="components/lightbox2/dist/css/lightbox.min.css">
 
 </head>
 
@@ -94,6 +95,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 <script type="text/javascript" src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
+<script src="components/lightbox2/dist/js/lightbox.js"></script>
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
 
